--- a/pythonparser/ChangeLog
+++ b/pythonparser/ChangeLog
@@ -1,5 +1,11 @@
+2013 Jun 27  Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Prepared for release v.1.6.2
+* Bug fix: parser was not able to parse python 3 style print() functions
+
 2013 Jun 18  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Prepared for release v.1.6.1
 * Bug fix: parser did not report errors if didn't reach the end
 * Increased performance due to fixed size arrays
 * Regexp based coding search is replaced with string search to avoid problems
