--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,6 @@
-XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+2013 Jun 29 Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Release 2.0.2
 * New feature: editor calltips (Ctrl+/) and auto calltips (switchable via the
   Options menu) when '(' is entered.
 * Fix: crash on Ubuntu 12.04 (possibly on other platforms too) in case of some
@@ -8,11 +9,13 @@ XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
   Ubuntu. Issue #387.
 * Fix: extra long signatures in a context help do not limit min window width.
   Issue #386.
+* Better completion for numpy names
+* Including scipy for better rope help
 
 2013 Jun 18 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Release 2.0.1
-* Replacing the 'file' utilities calls with magic module included in thirdparty
+* Replacing the 'file' utility calls with magic module included in thirdparty
   directory.
 
 
