--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -9,6 +9,7 @@
 * Better undo of the automatically trimmed empty opened lines.
 * Search indicators are configurable now per skin.
 * Make Ctrl+PgUp going to the previous tab while Ctrl+PgDwn to the next
+* New feature: ui configurable monospaced font
 
 2013 Jun 29 Sergey Satskiy <sergey.satskiy@gmail.com>
 
