--- a/src/plugins/README
+++ b/src/plugins/README
@@ -1,12 +1,22 @@
 Codimension plugins subsystem.
 
+Codimension plugins sybsystem is built on top of the yapsy library:
+http://yapsy.sourceforge.net/ released under simplified BSD license.
+So some terms (e.g. plugin category) and file formats (e.g. plugin
+description file format) are induced by the library and the description
+could be found on the library web site.
+
+
+
 There are two places where codimension looks for plugins:
-- system wide: <installation path>/codimension/plugins/
+- system wide: /usr/share/codimension-plugins/
+  The system-wide plugins location is separate to the location of the IDE
+  in order to simplfy plugins packaging for the developers
 - user: ~/.codimension/plugins/
 
 Codimension expects that each plugin occupies a designated directory and there
 are at least 3 files in each directory:
-- file.yapsy-plugin -> plugin description
+- file.cdmp -> plugin description
 - file.py -> plugin implementation
 - __init__.py
 
@@ -15,10 +25,12 @@ plugin directory.
 
 Each plugin could be enabled or disabled. By default a plugin is enabled however
 it could be disabled by the user or by codimension (if codimension detects poor
-implementation or a conflict).
+implementation or a conflict). If a plugin is disabled by codimension due to a
+detected conflict then the user will be able to enable it when a conflict is
+resolved.
 
 Each plugin must provide information at least about its name and its version
-(goes to file.yapsy-plugin).
+(goes to file.cdmp).
 In case if the same name plugin is found both in the system wide location and in
 the user directory the priority is given to the user plugin and the system one is
 automatically disabled. If the same name plugins are located in the system wide
@@ -28,16 +40,36 @@ version and the lower plugin version is automatically disabled.
 Each plugin must belong to a predefined plugin category. Depending on the category
 codimension expects a certain communication protocol.
 
-Implementation of a plugin basically includes inheriting from a plugin category
-base class and implementing the required methods of the base class.
+Implementation wise a plugin category means deriving from a plugin category
+interface class and implementing the required methods. The supported interface
+classes are located at codimension/src/plugins/categories/ directory.
 
+A plugin developer should follow the steps below:
+- Create a separate directory for a new plugin with an appropriate name.
+- Make sure that __init__.py is in the plugin directory.
+- Make a choice of a plugin category by analysis of the supported categories
+  at the codimension/src/plugins/categories/ directory.
+- Copy the chosen interface base class to the plugin directory.
+- Create a plugin implementing class which derives from the interface base
+  class. Preferably the plugin implementing file resides in a separate file.
+- Implement all the mandatory interface class methods.
+- Create a plugin description file .cdmp in the plugin directory and populate
+  it with the appropriate information.
+- The installation of the plugin is copying the plugin directory with all its
+  files to a system wide plugins location or to the user plugins location. Next
+  time codimension starts it will pick up and activate the new plugin.
 
-Revision control system category.
-class IRevisionControlSystemPlugin( IPlugin ):
+Currently supported plugin categories:
+- Version control system (see categories/vcsiface.py)
+  Serves various version control systems e.g. SVN
 
-    def __init__( self ):
-        return
-
-    def 
+Planned plugin categories:
+- Wizard (see categories/wizardiface.py)
+  Serves utility functions which could be run from the IDE UI
+- Exporter (see categories/exporteriface.py)
+  Serves exporting buffer/file/directory/project content to another format
+  e.g. pdf.
+- Spell checker (see categories/spellcheckeriface.py)
+  Serves spell checkers
 
 
